# summa

./: README.md  pyproject.toml  setup.py  testing.ipynb
examples/: introduction.ipynb
summa/: layers.py  models.py  training.py  utils.py  visualization.py
