[tool.poetry]
name = "summa"
version = "0.1.0"
description = "Additive Modeling in Python"
authors = ["Jeffrey Pike <jeffreypike.ai@gmail.com>"]
readme = "README.md"
packages = [{include = "summa"}]

[tool.poetry.dependencies]
python = "^3.10.0"
flax = "^0.8.4"
polars-lts-cpu = "^1.2.0"
plotly = "^5.22.0"
nbformat = "^5.10.4"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"